...
            android:layout_marginBottom="@dimen/simple_margin"
            android:layout_marginLeft="@dimen/simple_margin"
            android:layout_marginRight="@dimen/simple_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|right"
                android:orientation="horizontal">

                <TextView
...
                android:padding="@dimen/simple_padding"
                android:text="@string/steps_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/simple_margin"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
...
