...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exoplayer_height"
            app:surface_type="texture_view"
            tools:visibility="visible" />

        <ImageView
...
